<resources>
    <string name="app_name">My Weather lite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Просто погода \n и ничего лишнего.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_home_item_title">На главную</string>
    <string name="menu_hourly_forecast_item_title">Почасовой прогноз</string>
    <string name="menu_history_item_title">История</string>
    <string name="menu_app_info_item_title">О приложении</string>
    <string name="menu_croupItem_more_title">Дополнительно</string>
</resources>