<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_home_24"
            android:title="@string/menu_home_item_title" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_outline_history_toggle_off_24"
            android:title="@string/menu_hourly_forecast_item_title" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_outline_history_24"
            android:title="@string/menu_history_item_title" />
    </group>
    <item android:title="@string/menu_croupItem_more_title">
        <menu>
            <item
                android:id="@+id/app_info"
                android:icon="@drawable/ic_outline_info_24"
                android:title="@string/menu_app_info_item_title" />
        </menu>
    </item>
</menu>