<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.geekbrains.androidonkotlin.hw.myweatherlite.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.geekbrains.androidonkotlin.hw.myweatherlite.ui.hourly_forecast.HourlyForecastFragment"
        android:label="@string/menu_hourly_forecast_item_title"
        tools:layout="@layout/fragment_hourly_forecast" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.geekbrains.androidonkotlin.hw.myweatherlite.ui.history.HistoryFragment"
        android:label="@string/menu_history_item_title"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ru.geekbrains.androidonkotlin.hw.myweatherlite.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>